@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.15
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix crash caused by milestones for invalid items not being removed if they are in the last position of the set.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.14
 Date: 2023-01-27
